--- a/style.css
+++ b/style.css
@@ -6,8 +6,14 @@ body {
     background-attachment: fixed;
 }
 
+header > section#menu {
+    background-color: whitesmoke;
+    padding: 10px;
+    text-align: center;
+}
+
 main {
-    max-width: 600px;
+    max-width: 650px;
     margin: auto;
     padding: 10px;
     background-color: white;
@@ -18,8 +24,9 @@ main {
 
 main > section > h1.titulo{
     text-align: center;
-    font-size: 25px;
     padding: 10px;
+    font-size: 30px;
+    
 }
 
 main > section > img.imagens {
@@ -54,9 +61,9 @@ main > section > h3#fimAlgoritmo {
     
 }
 
-footer > h1 {
-    background-color: white;
+footer  {
+    background-color: whitesmoke;
     text-align: center;
-    padding: 10px;
-    font-size: large;
+    padding: 5px;
+
 }
