criei a página de ensino de banco de dados é já adicionei os códigos de ensino, falta só a parte de estilo da página

--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ main > section > h1.titulo{
     
 }
 
-main > section > img.imagens {
+main > section > div.imagens {
     max-width: 500px;
-    margin-left: 2em;
+    text-align: center;
 }
 
 main > section > p.paragrafos {
